5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1582_1332.log
== TEST (2019-03-16 21:53:20) 
-- CODE:
aresta =5

area =int(3*(aresta**2))**0.5
 
print(round(area, 4))
-- OUTPUT:
8.6603
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:53:47) 
-- CODE:
aresta =5

area =int((3*(aresta**2))**0.5)*3/2
 
print(round(area, 4))
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:53:53) 
-- CODE:
aresta =5

area =int((3*(aresta**2))**0.5)*3/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.142238
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:54:22) 
-- CODE:
aresta =5

area =int((3*(aresta**2))**0.5)*3/2
 
print(round(area, 4))
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:54:53) 
-- CODE:
aresta =5

area =int((3*(aresta**2))
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 5
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:55:08) 
-- CODE:
aresta =5

area =int(3*(aresta**2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 5
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:55:23) 
-- CODE:
aresta =5
area =int(3*(aresta**2))
print(round(area, 4))
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:55:38) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5
print(round(area, 4))
-- OUTPUT:
8.6603
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:56:15) 
-- CODE:
aresta =5
area =int((3*(aresta**2))**0.5)*(3/2)
print(round(area, 4))
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:56:25) 
-- CODE:
aresta =5
area =int((3*(aresta**2))**0.5)
print(round(area, 4))
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:56:31) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5
print(round(area, 4))
-- OUTPUT:
8.6603
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:56:45) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*1.5
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:56:47) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*1.5
print(round(area, 4))
-- EXECUTION TIME:
0.139151
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:56:55) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*1.5
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:57:33) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*1.5
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:57:35) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*1.5
print(round(area, 4))
-- EXECUTION TIME:
0.131062
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:58:16) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*1.5
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:58:33) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:58:36) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- EXECUTION TIME:
0.132209
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:58:44) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:59:25) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:59:28) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:59:31) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- EXECUTION TIME:
0.171816
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:59:33) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 22:42:15) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:35:21) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5
print(round(area, 4))
-- OUTPUT:
8.6603
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:36:04) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5
areatotal=area*1.5
print(round(areatotal, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 20:36:10) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5
areatotal=area*1.5
print(round(areatotal, 4))
-- EXECUTION TIME:
0.170756
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:38:25) 
-- CODE:
aresta =4.7518
area =int(3*(aresta**2))**0.5
areatotal=area*1.5
print(round(areatotal, 4))
-- OUTPUT:
12.278
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:43:49) 
-- CODE:
aresta =5
area =int(2.7095*(aresta**2))**0.5
areatotal=area*1.5
print(round(areatotal, 4))
-- OUTPUT:
12.278
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:43:59) 
-- CODE:
aresta =5
area =int(2.709519366*(aresta**2))**0.5
areatotal=area*1.5
print(round(areatotal, 4))
-- OUTPUT:
12.278
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:44:31) 
-- CODE:
aresta =5
area =int(2.709519366*(aresta**2))**0.5*(3/2)
print(round(areatotal, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(areatotal, 4))
NameError: name 'areatotal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 20:44:38) 
-- CODE:
aresta =5
area =int(2.709519366*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.278
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:03:58) 
-- CODE:
aresta =5
area =int(2.709519366*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.278
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:04:06) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:04:22) 
-- CODE:
aresta =5
area =int(4*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:04:30) 
-- CODE:
aresta =5
area =int(3
			*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:04:39) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:04:45) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 3))
-- OUTPUT:
12.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:04:51) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**0.5*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:05:03) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**1/2*(3/2)
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:05:15) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**(1/2)*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:06:20) 
-- CODE:
aresta =5
area =int(3*(aresta**3))**(1/2)*(3/2)
print(round(area, 4))
-- OUTPUT:
29.0474
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:06:26) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**(1/2)*(3/2)
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:06:39) 
-- CODE:
aresta =5
area =int(3*(aresta**2))**(1/2)*(3/2)
print(round(area, 4))
-- EXECUTION TIME:
0.29124
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:09:20) 
-- CODE:
aresta =5
area =int(3*(aresta**2)*(3**0.5)/(2)
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:10:32) 
-- CODE:
aresta =5
area =int(3*(aresta**2)
areatotal= int(area)*(3**0.5*2)
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    areatotal= int(area)*(3**0.5*2)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:10:43) 
-- CODE:
aresta =5
area =int(3*(aresta**2)
areatotal= int(area)*(3**0.5)
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    areatotal= int(area)*(3**0.5)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:10:52) 
-- CODE:
aresta =5
area =int(3*(aresta**2)
areatotal= int(area)*(3**0.5)
print(round(areatotal, 4))
-- ERROR:
File "XXXX", line 3
    areatotal= int(area)*(3**0.5)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:11:00) 
-- CODE:
aresta =5
area =int(3*(aresta**2)
areatotal=int(area)*(3**0.5)
print(round(areatotal, 4))
-- ERROR:
File "XXXX", line 3
    areatotal=int(area)*(3**0.5)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:11:08) 
-- CODE:
aresta =5
area =int(3*(aresta**2))
areatotal=int(area)*(3**0.5)
print(round(areatotal, 4))
-- OUTPUT:
129.9038
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:11:21) 
-- CODE:
aresta =5
area =int(3*(aresta**2))
areatotal=int(area)*(3**0.5)/2
print(round(areatotal, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:11:26) 
-- CODE:
aresta =5
area =int(3*(aresta**2))
areatotal=int(area)*(3**0.5)/2
print(round(areatotal, 4))
-- EXECUTION TIME:
0.139317
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:52:07) 
-- CODE:
aresta =5
area =int(3*(aresta**2))
areatotal=int(area)*(3**0.5)/2
print(round(areatotal, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:52:09) 
-- CODE:
aresta =5
area =int(3*(aresta**2))
areatotal=int(area)*(3**0.5)/2
print(round(areatotal, 4))
-- EXECUTION TIME:
0.196216
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:55:27) 
-- CODE:
aresta =5
area =int(3*(aresta**2))
areatotal=int(area)*(3**0.5)/2
print(round(areatotal, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
